# Deep-Dive-Video-Note-Taker

./: .dockerignore  .gitignore  Dockerfile  README.md  config.default.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: evaluate.py  setup.sh
src/notetaker/: __init__.py  __main__.py  cli.py  config.py  models.py
src/notetaker/api/: __init__.py  app.py  routes.py  tasks.py
src/notetaker/export/: __init__.py  json_export.py  markdown.py  notion.py  obsidian.py
src/notetaker/pipeline/: __init__.py  audio.py  embed.py  generate.py  qa.py  runner.py  transcribe.py
src/notetaker/storage/: __init__.py  cache.py  chroma.py  library.py
src/notetaker/utils/: __init__.py  download.py  logging.py  profiler.py  validators.py
src/notetaker/web/static/css/: style.css
src/notetaker/web/static/js/: app.js
src/notetaker/web/templates/: index.html
tests/: conftest.py  test_api.py  test_audio.py  test_cli.py  test_embed.py  test_export.py  test_generate.py  test_profiler.py  test_qa.py  test_transcribe.py
tests/evaluation/: bert_score_eval.py  rag_eval.py  rouge_eval.py  wer_eval.py
