[tool.poetry]
name = "deep-dive-notetaker"
version = "1.0.0"
description = "Zero-cost, CPU-only AI system that converts short-form video content into structured notes, key timestamps, and action items."
authors = ["Zohaib"]
license = "MIT"
packages = [{include = "notetaker", from = "src"}]

[tool.poetry.scripts]
notetaker = "notetaker.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.15.0"}
rich = "^13.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
jinja2 = "^3.1.0"
python-multipart = "^0.0.20"
pydantic = "^2.0"
pyyaml = "^6.0"
yt-dlp = ">=2025.0"
chromadb = "^1.0"
sentence-transformers = "^4.0"
ollama = "^0.4"
pywhispercpp = "^1.3"
httpx = "^0.28"
aiofiles = "^24.0"
onnxruntime = ">=1.17,<1.24"  # Pin: 1.24+ lacks Python 3.10 Windows wheels

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"
jiwer = "^3.0"
rouge-score = "^0.1"
bert-score = "^0.3"
ruff = "^0.11"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
